---------------------------------------------------------------------------------------------------
Version: 1.5.4
Date: 8 May 2022
  Bugfixes:
    - Fixed crash when searching for a virtual signal when 'Logistics' is enabled and 'Signal' is not
    - Fixed 'Entity' search not finding certain modded entities (e.g. electric offshore pumps, spidertron docks)
---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 8 May 2022
  Bugfixes:
    - Fixed crash when search results include an entity with no icon (e.g. Space Exploration's 'Space probe rocket').
---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 5 May 2022
  Bugfixes:
    - Fixed crash when loading a save that has had a player removed or in the scenario editor
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 30 April 2022
  Features:
    - Option to search only the surface (planet) that the player is on
  Bugfixes:
    - Fixed crash when opening the search interface when Spidertron Patrols is not installed
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 29 April 2022
  Features:
    - Added pin button to keep the interface open behind other GUIs
    - Added refresh button to rerun search
    - Added 'Logistics' search option to search for logistics entities transporting the item
    - Attempts to work out the correct item when using 'Control + Shift + Click' on recipes or entities that do not match their item names
    - Improved 'Entity' search for (modded) entities whose names do not match their item names
    - 'Storage' search now searches linked-containers (used by some mods)
  Bugfixes:
    - Fixed highlight boxes not being removed when clearing search (with right-click)