@@ -25,6 +25,7 @@ requesters-name=Request
 ground-items-name=Ground
 entities-name=Entity
 signals-name=Signal
+map-tags-name=Tag
 producers-tooltip=Search for machines that produce this item\n(e.g. __1__)
 storage-tooltip=Search for containers that contain this item\n(e.g. __1__)
 logistics-tooltip=Search for logistics entities that are transporting this item\n(e.g. __1__) 
@@ -32,3 +33,5 @@ requesters-tooltip=Search for logistic containers that are requesting this item\
 ground-items-tooltip=Search for this item on the ground
 entities-tooltip=Search for built entities of this item
 signals-tooltip=Search for entities that are sending this signal\n(limited to these types: __1__)
+map-tags-tooltip=Search for tags on the map that have this icon
+default-map-tag-name=Map tag
